test/files/pos/t0123.scala
class M{
  val 1 = 1;
}
