test/files/neg/bug512.scala
package test;
class Foo {
    val xxx = something ||
        something_else;
}
